fix: prevent star rating overflow in ProductCard

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -18,7 +18,7 @@
 }
 
 .productCard__left {
-	width: 75%;
+	width: 85%;
 	cursor: pointer;
 }
 
@@ -52,10 +52,6 @@
 	color: #ccc;
 }
 
-.productCard__left--rating .productCard__left--star {
-	width: 100px;
-}
-
 .productCard__left--circle {
 	width: 38px;
 	height: 38px;
@@ -67,9 +63,9 @@
 .productCard__right {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
-	width: 25%;
+	width: 15%;
 }
 
 .productCard__right--icon {
